k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustyocr-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: rustyocr.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80

          - path: /upload
            pathType: Prefix
            backend:
              service:
                name: file-upload-service
                port:
                  number: 8000

          - path: /jobs
            pathType: Prefix
            backend:
              service:
                name: file-upload-service
                port:
                  number: 8000
